[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Endscreenbg.png" type="Texture" id=1]
[ext_resource path="res://Interface/Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Endscreen.gd" type="Script" id=3]
[ext_resource path="res://Interface/end_screen_button_hover.png" type="Texture" id=4]
[ext_resource path="res://Audio/Skies.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 0.315125
margin_top = 0.315125
margin_right = 320.315
margin_bottom = 180.315
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 14.0
margin_top = 15.0
margin_right = 146.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.564706, 0.12549, 0.12549, 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 37.0
margin_top = 35.0
margin_right = 139.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 20.0
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Continue" type="Label" parent="VBoxContainer/Continue"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -6.5
margin_right = 56.0
margin_bottom = 6.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 104.0
margin_bottom = 44.0
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="Label" parent="VBoxContainer/Menu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -6.5
margin_right = 37.0
margin_bottom = 6.5
custom_fonts/font = SubResource( 3 )
text = "Menu"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 104.0
margin_bottom = 68.0
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Quit" type="Label" parent="VBoxContainer/Quit"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -6.5
margin_right = 28.0
margin_bottom = 6.5
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -145.0
margin_top = 92.0003
margin_right = -6.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
margin_right = 139.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 5 )
text = "Made by:
     Terrain

Music:
     Skies - 
	        Ross Bugden
     Teasure Hunter -
	        Ross Budgen
	
Thanks for playing!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -16.98
autoplay = true

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
